Fix tests for -XX, then add test for -XX:+ and -XX:-